Tue Mar 13 23:15:11 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/MultiTopicDataReaderBase.h:
        * dds/DCPS/MultiTopicDataReaderBase.cpp:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DdsDcpsSubscriptionExt.idl:
        * tests/DCPS/DCPSInfoRepo/DCPSSubscriberI.h:

          Removed DataReaderQosExt from DdsDcpsSubscriptionExt.idl.  This was
          only being used to provide a non-standard-compliant
          backwards-compatibility setting to get the DURABILITY QoS behavior
          matching that of OpenDDS v1.2 and earlier.  It was not being used in
          any OpenDDS code.

        * tests/DCPS/PersistentDurability/DataWriterListenerImpl.h:
        * tests/DCPS/PersistentDurability/DataWriterListenerImpl.cpp:
        * tests/DCPS/PersistentDurability/publisher.cpp:
        * tests/DCPS/PersistentDurability/subscriber.cpp:

          Change the test to use PERSISTENT_DURABILITY_QOS instead of the
          OpenDDS-custom QoS value.

Tue Mar 13 20:09:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:

          Add writer-side handling of durable data.  Durable data for each
          reader is queued until a timeout expires or the reader requests
          it using an ACKNACK, the writer writes it an the reader acknowledges.

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Now that the transport is doing the above, discovery can't hijack
          the transport's reactor thread during add_association().  Instead